--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Javascript Intermediário</title>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   
@@ -18,6 +20,38 @@
   <div class="box">Div 3</div>
   <div class="box">Div 4</div>
   <div class="box">Div 5</div>
+
+<!-- menu hamburguer -->
+
+  <div class="botaoMenu" onclick="abrirOuFecharMenu()">
+    Abrir Menu
+  </div>
+
+  <div class="menuMobile">
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+      <li>Item 4</li>
+    </ul>
+  </div>
+<br><br>
+<!-- menu hamburguer fim -->
+
+  <button id="botaoTeste">Teste onclick</button>
+  <br>
+
+  <button id="botaoTeste2">Teste addEventListener</button>
+  <br>
+
+  <button id="botaoTeste3">Teste onclick com função externa</button>
+  <br>
+
+  <button id="botaoContador">Contador</button>
+  <br>
+  <br>
+
+  <div class="quadrado"></div>
 
   <script src="script.js"></script>
 </body>
