--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
   <div class="quadrado"></div>
 
+  <br><br><br>
+
+  <input type="text" id="dado" name="tarefa" placeholder="Digite uma tarefa">
+  <button id="botaoCadastrar">Cadastrar</button>
+
+  <div class="toast"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
