--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 
   <div class="toast"></div>
 
+  <br><br><br>
+
+<!-- contador -->
+
+  <div id="contadorIntervalo"></div>
+  <button id="botaoPausar">Pausar</button>
+
+<!-- contador fim -->
+
   <script src="script.js"></script>
 </body>
 </html>
